<resources>
    <string name="app_name">Electric Feedback</string>
    <string name="title_activity_maps">Electric Feedback</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button1">Manually Enter Route</string>
    <string name="button2">Start Background Route Tracking</string>
    <string name="HomeScreenMessage">Welcome!</string>
    <string name="HomeScreenInfo">Please select a routing method below to begin a new survey.</string>
    <string name="nav_header_desc">Anonymous route algorithm feedback for future electric car charging lanes.</string>
    <string name="nav_header_title">Electric Feedback</string>
    <string name="nav_header_subtitle">Clemson ACS Lab</string>
    <string name="action_settings">User Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>

    <string name="tracking_started_noto_notification_title_template">Tracking started noto: %1$s
    </string>

    <!-- TODO: remove this placeholder text -->
    <string name="tracking_started_noto_notification_placeholder_text_template">You said %1$s and
        lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum,
        velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed
        turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem,
        ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet
        turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat
        nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="firebase_path">location</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to stop.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpass</string>
    <string name="channel_name">Background GPS Tracking</string>
    <string name="channel_description">notification_description</string>
    <string name="nav_menu_return_to_welcome">Return to Welcome Page</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="find_routes">Find Routes</string>
    <string name="enter_origin_address">Enter origin address</string>
    <string name="write_optional_feedback_for_the_asc_lab">Write optional Feedback for the ASC Lab</string>
    <color name="white">#FFFFFF</color>
</resources>
