<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="224dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:text="@string/button1"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="215dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="224dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="122dp"
            android:text="@string/button2"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="252dp"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="151dp"
            android:text="@string/HomeScreenInfo"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HomeScreenMessage"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/HomeScreenMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:text="@string/HomeScreenMessage"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="26dp" />

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>